feat: treeview filtering

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -3,12 +3,17 @@
         <mona-splitter-pane [size]="300" [collapsible]="true">
             <mona-tree-view [data]="treeData" textField="text" childrenField="items" keyField="id"
                             [monaTreeViewCheckable]="{enabled: true, checkChildren: true, checkParents: true, mode: 'multiple'}"
-                            [checkedKeys]="treeCheckedKeys" (checkedKeysChange)="onTreeCheckedKeysChange($event)"
+                            [checkedKeys]="treeCheckedKeys"
+                            (checkedKeysChange)="onTreeCheckedKeysChange($event)"
                             monaTreeViewExpandable [expandedKeys]="treeExpandedKeys"
                             (expandedKeysChange)="onTreeExpandedKeysChange($event)"
                             [monaTreeViewSelectable]="{enabled: true, mode: 'single', childrenOnly: true}"
                             [selectedKeys]="treeSelectedKeys"
                             (selectedKeysChange)="onTreeSelectedKeysChange($event)"
+                            [monaTreeViewFilterable]="{enabled: true, operator: 'contains', caseSensitive: false}"
+                            filterPlaceholder="Search..."
+                            [filter]="treeFilter()"
+                            (filterChange)="onTreeFilterChange($event)"
                             (nodeDragStart)="onTreeNodeDragStart($event)"
                             (nodeDrag)="onTreeNodeDrag($event)"
                             (nodeDrop)="onTreeNodeDrop($event)"
