feat: clearButton input for textbox component

--- a/projects/mona-ui/src/lib/inputs/text-box/components/text-box/text-box.component.html
+++ b/projects/mona-ui/src/lib/inputs/text-box/components/text-box/text-box.component.html
@@ -11,6 +11,13 @@
            (ngModelChange)="onValueChange($event)"
            (blur)="inputBlur.emit($event)"
            (focus)="inputFocus.emit($event)" monaTextBox />
+
+    @if (clearButton && value.length !== 0) {
+        <button monaButton [flat]="true" (click)="onClearClick()">
+            <fa-icon [icon]="clearIcon"></fa-icon>
+        </button>
+    }
+
     <ng-container *ngFor="let suffixTemplate of suffixTemplateList">
         <span class="mona-text-box-suffix">
             <ng-container *ngTemplateOutlet="suffixTemplate"></ng-container>
