feat: display clear button for tree view filter input

--- a/projects/mona-ui/src/lib/tree-view/components/tree-view-filter/tree-view-filter.component.html
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view-filter/tree-view-filter.component.html
@@ -1,5 +1,6 @@
 <div class="mona-tree-view-filter">
     <mona-text-box [ngModel]="treeViewService.filterText()"
+                   [clearButton]="true"
                    [placeholder]="treeViewService.filterPlaceholder()"
                    (ngModelChange)="onFilterChange($event)">
         <ng-template monaTextBoxPrefixTemplate>
