--- a/projects/mona-ui/src/lib/inputs/text-box/components/text-box/text-box.component.html
+++ b/projects/mona-ui/src/lib/inputs/text-box/components/text-box/text-box.component.html
@@ -13,7 +13,7 @@
            (focus)="inputFocus.emit($event)" monaTextBox />
 
     @if (clearButton && value.length !== 0) {
-        <button monaButton [flat]="true" (click)="onClearClick()">
+        <button monaButton [flat]="true" title="Clear" (click)="onClearClick()">
             <fa-icon [icon]="clearIcon"></fa-icon>
         </button>
     }
