feat: dropdown tree filtering

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -455,11 +455,12 @@
                                                      textField="text"
                                                      [itemDisabler]="dropdownTreeDisabler"
                                                      monaDropDownTreeExpandable
+                                                     monaDropDownTreeFilterable
                                                      [ngModel]="dropdownTreeSelectedValue"
                                                      (ngModelChange)="onDropdownTreeValueChange($event)"
                                                      [expandedKeys]="dropdownTreeExpandedKeys"
                                                      (expandedKeysChange)="onDropdownTreeExpandedKeysChange($event)"
-                                                     style="width: 140px;"></mona-drop-down-tree>
+                                                     style="width: 220px;"></mona-drop-down-tree>
                             </div>
 
                             <div style="display: flex; align-items: center; margin-top: 40px;">
