--- a/projects/mona-ui/src/lib/dropdowns/drop-down-tree/components/drop-down-tree/drop-down-tree.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/drop-down-tree/components/drop-down-tree/drop-down-tree.component.html
@@ -18,6 +18,10 @@
                         [nodeDisabler]="disabler()"
                         [monaTreeViewSelectable]="selectableOptions"
                         [selectedKeys]="selectedTreeKeys()"
+                        [monaTreeViewFilterable]="dropdownTreeService.filterableOptions"
+                        [filter]="dropdownTreeService.filterText()"
+                        [filterPlaceholder]="dropdownTreeService.filterPlaceholder()"
+                        (filterChange)="dropdownTreeService.filterChange.emit($event)"
                         [monaTreeViewExpandable]="dropdownTreeService.expandableOptions"
                         [expandedKeys]="dropdownTreeService.expandedKeys()"
                         (expandedKeysChange)="onExpandedKeysChange($event)"
