--- a/projects/mona-ui/src/lib/common/components/filter-input/filter-input.component.html
+++ b/projects/mona-ui/src/lib/common/components/filter-input/filter-input.component.html
@@ -1,10 +1,10 @@
-<div class="mona-tree-view-filter">
-    <mona-text-box [ngModel]="treeViewService.filterText()"
+<div class="mona-filter-input">
+    <mona-text-box [ngModel]="filterText()"
                    [clearButton]="true"
-                   [placeholder]="treeViewService.filterPlaceholder()"
+                   [placeholder]="filterPlaceholder()"
                    (ngModelChange)="onFilterChange($event)">
         <ng-template monaTextBoxPrefixTemplate>
-            <div class="mona-tree-view-filter-icon">
+            <div class="mona-filter-input-icon">
                 <fa-icon [icon]="filterIcon"></fa-icon>
             </div>
         </ng-template>
