refactor: update ui for dropdown filters
DropDownList and MultiSelectList

--- a/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.scss
+++ b/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.scss
@@ -11,4 +11,10 @@ div.mona-dropdown-value {
     padding: 0 8px;
     cursor: pointer;
     user-select: none;
+    overflow: hidden;
+    white-space: nowrap;
+    & > span {
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
