--- a/projects/mona-ui/src/lib/popup/components/popup-wrapper/popup-wrapper.component.scss
+++ b/projects/mona-ui/src/lib/popup/components/popup-wrapper/popup-wrapper.component.scss
@@ -1,10 +1,5 @@
 :host {
     width: 100%;
     height: 100%;
-}
-
-div.mona-popup-wrapper {
-    width: 100%;
-    height: 100%;
-    overflow: hidden auto;
+    overflow: hidden;
 }
