--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -327,7 +327,7 @@ mona-popup-list-item {
 }
 
 .mona-dropdown-popup-list-wrapper {
-    max-height: 250px;
+    height: 100%;
 }
 
 ul.mona-list mona-text-box.filter-box {
@@ -526,7 +526,6 @@ div.mona-time-picker-popup {
     align-items: center;
     justify-content: center;
     height: 100px;
-    //font-size: 14px;
     color: var(--mona-disabled-color);
 }
 
@@ -534,7 +533,7 @@ div.mona-time-picker-popup {
     flex-direction: column;
     user-select: none;
     padding: 0 !important;
-    overflow: hidden auto;
+    overflow: hidden;
 
     & mona-text-box.filter-box {
         & div.mona-text-box {
@@ -544,9 +543,13 @@ div.mona-time-picker-popup {
             }
         }
     }
-
     @include scrollbars;
 }
+
+.mona-dropdown-popup-content ul.mona-list {
+    max-height: 250px;
+}
+
 
 .mona-dropdown-popup-content-bottom {
     //border-top: 1px solid transparent !important;
@@ -577,17 +580,15 @@ div.mona-time-picker-popup {
     }
 }
 
-.mona-dropdown-tree-popup-content {
-    & mona-filter-input {
-        & div.mona-text-box {
-            background-color: var(--mona-background-lighter);
-            & input {
-                background-color: transparent;
-            }
+mona-filter-input.mona-popup-filter-input,
+.mona-dropdown-tree-popup-content mona-filter-input {
+    & div.mona-text-box {
+        background-color: var(--mona-background-lighter);
+        & input {
+            background-color: transparent;
         }
     }
 }
-
 
 /** Multi Select */
 .mona-multi-select {
@@ -737,7 +738,6 @@ input[type="checkbox"][monaCheckBox] {
             background-color: var(--mona-background);
             border: 1px solid var(--mona-border-color);
             border-radius: var(--mona-border-radius);
-            //border-radius: 0;
             display: inline-flex;
             align-items: center;
             justify-content: center;
@@ -775,7 +775,6 @@ input[type="checkbox"][monaCheckBox] {
         background-color: var(--mona-primary);
         color: var(--mona-background);
         border: 1px solid var(--mona-selected-border-color);
-        box-shadow: inset 0 0 0 1px var(--mona-background);
     }
     &:indeterminate:disabled + label:before {
         @include disabled;
