--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -148,40 +148,84 @@ input, textarea, button {
     color: var(--mona-text);
 }
 
-ul.mona-list {
-    & li {
-        color: var(--mona-text);
-
-        &:hover {
-            background-color: var(--mona-background-hover);
-        }
-        &:active:not(.mona-selected) {
-            background-color: var(--mona-background-active);
+div.mona-list {
+    @include font-medium;
+    border: 1px solid var(--mona-border-color);
+    & ul {
+        @include scrollbars-thin;
+        & li {
+            color: var(--mona-text);
         }
 
-        &.mona-selected {
-            background-color: var(--mona-primary);
-            color: var(--mona-text-inverted);
+        & li.mona-list-group-header {
+            background-color: var(--mona-background-dark);
+            border-bottom: 1px solid var(--mona-border-color);
+            &:not(:first-child) {
+                border-top: 1px solid var(--mona-border-color);
+            }
         }
 
         // TODO: Update this to a better visual style
-        &.mona-highlighted {
-            //border: 1px solid darkgray;
+        & li.mona-highlighted {
             box-shadow: 0 0 0 1px var(--mona-focus-border-color) inset;
         }
-
-        &.mona-disabled {
+        & li.mona-selected {
+            background-color: var(--mona-primary);
+            color: var(--mona-text-inverted);
+        }
+        & li.mona-disabled {
             @include disabled;
         }
     }
-    @include scrollbars-thin;
+
+    & .cdk-virtual-scrollable {
+        @include scrollbars-thin;
+    }
 }
 
-li.mona-list-group-header {
-    background-color: var(--mona-background-dark);
-    border-top: 1px solid var(--mona-border-color);
-    border-bottom: 0.5px solid var(--mona-border-color);
+mona-filter-input.mona-list-filter-input {
+    & div.mona-text-box {
+        background-color: var(--mona-background-lighter);
+        & input {
+            background-color: transparent;
+        }
+    }
 }
+
+//ul.mona-list {
+//    & li {
+//        color: var(--mona-text);
+//
+//        &:hover {
+//            background-color: var(--mona-background-hover);
+//        }
+//        &:active:not(.mona-selected) {
+//            background-color: var(--mona-background-active);
+//        }
+//
+//        &.mona-selected {
+//            background-color: var(--mona-primary);
+//            color: var(--mona-text-inverted);
+//        }
+//
+//        // TODO: Update this to a better visual style
+//        &.mona-highlighted {
+//            //border: 1px solid darkgray;
+//            box-shadow: 0 0 0 1px var(--mona-focus-border-color) inset;
+//        }
+//
+//        &.mona-disabled {
+//            @include disabled;
+//        }
+//    }
+//    @include scrollbars-thin;
+//}
+
+//li.mona-list-group-header {
+//    background-color: var(--mona-background-dark);
+//    border-top: 1px solid var(--mona-border-color);
+//    border-bottom: 0.5px solid var(--mona-border-color);
+//}
 
 .mona-list-popup-content {
     padding: 0 !important;
