--- a/projects/mona-ui/src/lib/common/list/components/list-item/list-item.component.html
+++ b/projects/mona-ui/src/lib/common/list/components/list-item/list-item.component.html
@@ -1,1 +1,6 @@
-<span>{{itemText()}}</span>
+@if (itemTemplate()) {
+    <ng-container [ngTemplateOutlet]="itemTemplate()"
+                  [ngTemplateOutletContext]="{$implicit: dataItem()}"></ng-container>
+} @else {
+    <span>{{itemText()}}</span>
+}
