--- a/projects/mona-ui/src/lib/common/list/components/list/list.component.html
+++ b/projects/mona-ui/src/lib/common/list/components/list/list.component.html
@@ -5,12 +5,35 @@
                            (filterChange)="onFilterChange($event)"
                            class="mona-list-filter-input"></mona-filter-input>
     }
-    <ul>
-        @for (item of listService.viewItems(); track item.uid) {
-            <ng-container [ngTemplateOutlet]="listItemTemplate"
-                          [ngTemplateOutletContext]="{$implicit: item}"></ng-container>
+    @if (listService.virtualScrollOptions().enabled) {
+        @if (listService.viewItems().length !== 0) {
+            <cdk-virtual-scroll-viewport [itemSize]="listService.virtualScrollOptions().height">
+                <ul>
+                    <ng-container *cdkVirtualFor="let item of listService.viewItems()">
+                        <ng-container [ngTemplateOutlet]="listItemTemplate"
+                                      [ngTemplateOutletContext]="{$implicit: item}"></ng-container>
+                    </ng-container>
+                </ul>
+            </cdk-virtual-scroll-viewport>
+        } @else if (noDataTemplate) {
+            <ng-container [ngTemplateOutlet]="noDataTemplate"></ng-container>
+        } @else {
+            <mona-placeholder text="No data"></mona-placeholder>
         }
-    </ul>
+    } @else {
+        @if (listService.viewItems().length !== 0) {
+            <ul>
+                @for (item of listService.viewItems(); track item.uid) {
+                    <ng-container [ngTemplateOutlet]="listItemTemplate"
+                                  [ngTemplateOutletContext]="{$implicit: item}"></ng-container>
+                }
+            </ul>
+        } @else if (noDataTemplate) {
+            <ng-container [ngTemplateOutlet]="noDataTemplate"></ng-container>
+        } @else {
+            <mona-placeholder text="No data"></mona-placeholder>
+        }
+    }
 </div>
 
 <ng-template #listItemTemplate let-item>
