Initial navigation implementation

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -650,7 +650,7 @@
                             </div>
 
                             <div style="width: 250px;background: var(--mona-background);">
-                                <mona-list [data]="listViewDataItems" textField="text" monaListVirtualScroll monaListFilterable>
+                                <mona-list>
                                     <ng-template monaListItemTemplate let-item>
                                         @if (item.value % 2 === 0) {
                                             <span style="color: #ffcc75;">{{item.text}}</span>
@@ -665,7 +665,10 @@
                                         <div style="background: var(--mona-background-dark); color: coral; border-bottom: 1px solid var(--mona-border-color-dark); padding: 2px 4px;">Header</div>
                                     </ng-template>
                                     <ng-template monaListFooterTemplate>
-                                        <div style="background: var(--mona-background-dark); color: darkorange; border-top: 1px solid var(--mona-border-color-dark); padding: 2px 4px;">Footer</div>
+                                        <div style="display: flex; padding: 2px 4px; column-gap: 4px; border-top: 1px solid var(--mona-border-color-dark); background: var(--mona-background-dark);">
+                                            <button monaButton (click)="listService.navigateItem('up')">Up</button>
+                                            <button monaButton (click)="listService.navigateItem('down')">Down</button>
+                                        </div>
                                     </ng-template>
                                 </mona-list>
                             </div>
