--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -155,6 +155,13 @@ div.mona-list {
         @include scrollbars-thin;
         & li {
             color: var(--mona-text);
+            transition: background-color 0.15s ease-out;
+            &:hover {
+                background-color: var(--mona-background-hover);
+            }
+            &:active:not(.mona-selected) {
+                background-color: var(--mona-background-active);
+            }
         }
 
         & li.mona-list-group-header {
