--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -101,7 +101,7 @@
                         </div>
                     </ng-template>
                 </mona-tab>
-                <mona-tab [title]="'TAB I'" [closable]="false" [selected]="false">
+                <mona-tab [title]="'TAB I'" [closable]="false" [selected]="true">
                     <ng-template monaTabTitleTemplate>
                         <span style="color: deeppink; font-weight: bold;">Components</span>
                     </ng-template>
@@ -603,7 +603,7 @@
                         </div>
                     </ng-template>
                 </mona-tab>
-                <mona-tab title="Expansion Panel" [disabled]="false" [selected]="true">
+                <mona-tab title="Expansion Panel" [disabled]="false" [selected]="false">
                     <ng-template monaTabContentTemplate>
                         <div style="width: 100%; height: 100%; padding: 20px;">
                             <mona-expansion-panel title="Panel {{x}}" *ngFor="let x of [1,2,3]">
@@ -649,7 +649,7 @@
                                 <label for="radioButton3">Radio Button Label 3</label>
                             </div>
 
-                            <div style="width: 250px;background: var(--mona-background);">
+                            <div style="width: 250px;background: var(--mona-background); border: 1px solid var(--mona-border-color)">
                                 <mona-list>
                                     <ng-template monaListItemTemplate let-item>
                                         @if (item.value % 2 === 0) {
